# test-mcp-server

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_mcp_server.py
